# SymGridPar2

./: LICENSE  README.md  SymGridPar2.cabal  stack.yaml
gap-bits/: GAPServer.g
src/: .#GAPServerIO.hs
src/Binding/: GAPServerIO.hs
src/SGP2/: GAPServer.hs
test/: TestBinding.hs  TestFiniteGeometry.hs  TestSGP.hs  finiteGeometry.g
