name:                SymGridPar2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/BlairArchibald/SymGradPar2#readme
license:             BSD3
license-file:        LICENSE
author:              Blair Archibald
maintainer:          b.archibald.1@research.gla.ac.uk
copyright:           2016 (C) Blair Archibald
category:            parallelism
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Binding.GAPServerIO
                     , SGP2.GAPServer
  build-depends:       base >= 4.7 && < 5
                     , binary >= 0.7 && < 0.8
                     , bytestring >= 0.10 && < 0.11
                     , cereal >= 0.4 && < 5
                     , deepseq >= 1.4 && < 1.5
                     , hdph
                     , process >= 1.2 && < 1.3
  default-language:    Haskell2010
  ghc-options: -O2
  cpp-options: -DHGAPDIR="/home/blair/src/haskell/SymGridPar2/gap-bits"

executable SymGridPar2-testBinding
  hs-source-dirs:      test
  main-is:             TestBinding.hs
  build-depends:       base
                     , SymGridPar2
                     , bytestring >= 0.10 && < 0.11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable SymGridPar2-testSGP
  hs-source-dirs:      test
  main-is:             TestSGP.hs
  build-depends:       base
                     , SymGridPar2
                     , bytestring >= 0.10 && < 0.11
                     , template-haskell
                     , hdph
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BlairArchibald/SymGradPar2
